new received messages shown in the panel wiht scrollbars.

--- a/src/main/resources/gui/lang_en.properties
+++ b/src/main/resources/gui/lang_en.properties
@@ -22,3 +22,5 @@ copy=Copy
 interface.btn.validateXml=Проверить
 doc.gisgmp.charge.changeStatus=Статус, отражающий изменение данных начисления\nВозможные значения\:\n1 – новое\n2 – изменение\n3 – аннулирование
 doc.gisgmp.SupplierBillID=УИН
+interface.btn.ConvertToBase64FinalPayment=Convert to base64 (Final Payment Response)
+interface.settings.auto.start.gisgmp=Start GIS GMP web service with the launch of the application
