--- a/src/main/resources/gui/lang_ru.properties
+++ b/src/main/resources/gui/lang_ru.properties
@@ -61,4 +61,5 @@ doc.gisgmp.template= \
   <HTML><BODY> \
   <BR/> \
   </BODY></HTML>
+interface.btn.ConvertToBase64FinalPayment=Конвертировать текст в Base64 (ответ со сведением о платеже)
 
